[package]
name = "img2graph"
version = "0.1.0"
authors = ["Bernd Malle <bernd.malle@gmail.com>"]
edition = "2018"

[[bin]]
name = "i2g"
path = "./src/bin/i2g.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
xorshift = "0.1"
